--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "nest-auth",
-  "version": "0.0.1",
-  "description": "",
-  "author": "",
-  "private": true,
-  "license": "UNLICENSED",
+  "version": "1.1.1",
+  "description": "Easy authentication system for Nestjs",
+  "author": "Yahya Parvin Aghdam",
+  "private": false,
+  "license": "MIT",
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
